--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Gennady Grishkovtsov <grishkovelli@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --env.NODE_ENV=development --mode development --open --hot --https",
+    "dev": "webpack-dev-server --env.NODE_ENV=development --mode development --open --hot",
     "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
   },
   "dependencies": {
