--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "vue-audio-recorder",
   "description": "Audio recorder for Vue.js. It allows to create, play, download and store records on a server",
   "version": "3.0.1",
-  "author": "Gennady Grishkovtsov <grishkovelli@gmail.com>",
+  "author": "Reis Martins",
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --env.NODE_ENV=development --mode development --open --hot",
     "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
   },
   "dependencies": {
-    "lamejs": "^1.2.0"
+    "lamejs": "^1.2.0",
+    "vue-js-toggle-button": "^1.3.2"
   },
   "browserslist": [
     "> 1%",
@@ -23,7 +24,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.2.0",
     "file-loader": "^1.1.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
