--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
   },
   "dependencies": {
-    "lamejs": "^1.2.0",
-    "vue-js-toggle-button": "^1.3.2"
+    "lamejs": "^1.2.0"
   },
   "browserslist": [
     "> 1%",
