--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
   },
   "dependencies": {
-    "lamejs": "^1.2.0"
+    "async-es": "^2.6.3",
+    "lamejs": "^1.2.0",
+    "vue-i18n": "^8.15.0",
+    "vue-toasted": "^1.1.27"
   },
   "browserslist": [
     "> 1%",
